fixed collapse layout on XS

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -4,7 +4,6 @@
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
 .section-header {
-
   position: fixed;
   top: 0;
   right: 0;
@@ -292,7 +291,6 @@
 
 //991 to 768
 @include respond-to(md) {
-
   .section-header {
     border-bottom: none;
 
@@ -558,19 +556,22 @@
 
 //767 to 576 
 @include respond-to(sm) {
-
   .section-header {
     padding-top: 30px;
     border-bottom: none;
 
     &.scrolled {
       padding:0;
-      padding-top: 40px;
-      height: 100px;
+      padding-top: 25px;
+      height: 75px;
       
       background-color: $white;
       border-bottom: 1px solid $white1;
       transition: all .4s;
+    }
+
+    .scroll {
+      overflow: hidden;
     }
 
     .navbar-nav {
@@ -581,18 +582,18 @@
       display: block;
       list-style-type: none;
 
-      padding: 0px 12px;
+      padding: 0 15px;
       margin-bottom: 0px;
     }
 
     .nav-item {
       margin-top: 10px;
-      line-height: 30px;
+      line-height: 20px;
     }
 
     .navbar-toggler {
       top: -130px;
-      right: 15px;
+      right: 5px;
     }
 
     .toggler-bar:nth-child(2) {
@@ -605,11 +606,10 @@
 
     .btn-call {
       display: block;
-
       padding: 18px 10px;
       margin-top: 20px;
-      margin-bottom: 20px;
-      width: 155px;
+      margin-bottom: 25px;
+      width: 100%;
       height: 45px;
 
       font-family: $font-opensans-bold;
@@ -618,14 +618,14 @@
     }
 
     .form-control {
-      padding-left: 63px;
-      margin-top: 10px;
+      padding-left: 25px;
       margin-right: 0px;
-      width: 155px;
+      width: 100%;
       height: 42px;
 
       font-family: $font-opensans-bold;
       font-size: 14px;
+      text-align: center;
       border-radius: 25px;
   
       appearance: none;
@@ -633,23 +633,33 @@
 
     .img-arrowdown {
       position: relative;
-      bottom: 39px;
-      left: 90px;
+      bottom: 27px;
+      left: -20px;
 
-      width: 2%;
+      width: 2.5%;
+
+      float: right;
     }
 
     .btn-link {
-      margin-top: -18px;
+      margin-top: -15px;
       margin-right: 5px;
       margin-left: 5px;
 
+      font-size: 15px;
       color: $white;
     }
 
     .btn-lang {
+      display: block;
       margin-top: 0px;
       margin-right: 0px;
+
+      text-align: center;
+    }
+
+    .img-call {
+      margin-left: -5px;
     }
 
     .md-btn-call {
@@ -703,15 +713,14 @@
 
     .img-logo {
       padding-bottom: 125px;
-      margin-top: -15px;
+      margin-top: -20px;
       margin-left: 0px;
-   
       width: 150px;
     }
 
     .collapse {
       position: fixed;
-      top: 84px;
+      top: 75px;
       bottom: 0;
       right: -100%;
       z-index: 2000;
@@ -763,6 +772,7 @@
       height: 54px;
 
       text-align: center;
+
       background-color: #f3f7fc;
       border-radius: 50%;
     }
@@ -773,11 +783,11 @@
 
       display: flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: space-between;
       align-items: center;
 
+      padding: 10px 10px;
       margin: 0;
-      padding: 10px 15px;
       width: 100%;
 
       border-top: 1px solid #ededee;
@@ -786,7 +796,7 @@
 
     .header-icons {
       position: relative;
-      bottom: -31.4%;
+      bottom: -40%;
     }
 
     .fa {
@@ -811,8 +821,8 @@
 
     &.scrolled {
       padding:0;
-      padding-top: 45px;
-      height: 100px;
+      padding-top: 25px;
+      height: 75px;
       
       background-color: $white;
       border-bottom: 1px solid $white1;
@@ -831,18 +841,18 @@
       display: block;
       list-style-type: none;
 
-      padding: 0px 12px;
+      padding: 0 15px;
       margin-bottom: 0px;
     }
 
     .nav-item {
       margin-top: 10px;
-      line-height: 30px;
+      line-height: 20px;
     }
 
     .navbar-toggler {
       top: -130px;
-      right: 15px;
+      right: 5px;
     }
 
     .toggler-bar:nth-child(2) {
@@ -857,8 +867,8 @@
       display: block;
       padding: 18px 10px;
       margin-top: 20px;
-      margin-bottom: 20px;
-      width: 155px;
+      margin-bottom: 25px;
+      width: 100%;
       height: 45px;
 
       font-family: $font-opensans-bold;
@@ -867,14 +877,14 @@
     }
 
     .form-control {
-      padding-left: 63px;
-      margin-top: 10px;
+      padding-left: 25px;
       margin-right: 0px;
-      width: 155px;
+      width: 100%;
       height: 42px;
 
       font-family: $font-opensans-bold;
       font-size: 14px;
+      text-align: center;
       border-radius: 25px;
   
       appearance: none;
@@ -882,23 +892,33 @@
 
     .img-arrowdown {
       position: relative;
-      bottom: 39px;
-      left: 90px;
+      bottom: 27px;
+      left: -20px;
 
-      width: 4%;
+      width: 4.3%;
+
+      float: right;
     }
 
     .btn-link {
-      margin-top: -18px;
+      margin-top: -15px;
       margin-right: 5px;
       margin-left: 5px;
 
+      font-size: 15px;
       color: $white;
     }
 
     .btn-lang {
+      display: block;
       margin-top: 0px;
       margin-right: 0px;
+
+      text-align: center;
+    }
+
+    .img-call {
+      margin-left: -5px;
     }
 
     .md-btn-call {
@@ -924,7 +944,6 @@
     }
 
     .md-btn-lang {
-
       display: none;
       margin-top: 15px;
       width: 150px;
@@ -938,11 +957,12 @@
       border-radius: 25px;
 
       .form-control {
-
         height: auto;
+
         color: $white;
         font-family: $font-opensans-bold;
         font-size: 15px;
+
         background: #0076b1 no-repeat center right 19px;
         border: none;
         border-radius: 25px;
@@ -959,7 +979,7 @@
 
     .collapse {
       position: fixed;
-      top: 79px;
+      top: 75px;
       bottom: 0;
       right: -100%;
       z-index: 2000;
@@ -1022,10 +1042,10 @@
 
       display: flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: space-between;
       align-items: center;
 
-      padding: 10px 15px;
+      padding: 10px 10px;
       margin: 0;
       width: 100%;
 
@@ -1035,7 +1055,7 @@
 
     .header-icons {
       position: relative;
-      bottom: -31.4%;
+      bottom: -40%;
     }
 
     .fa {
